tests/machine/x/go/group_items_iteration.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_items_iteration.go:55:23: x.Val undefined (type any has no field or method Val)
../../../tests/machine/x/go/group_items_iteration.go:62:21: cannot use _ as value or type

1: //go:build ignore
